# kernel-borderlands

./: AGENT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html
.github/workflows/: retry-pages-deploy.yml
config/: README.md  policy.yaml
docs/: CrossKernelPortability.md  README.md  cross-kernel-portability.md  hookpoints.md  index.html  installation.md  kb-team.md  kbd-contracts.md  kernel_borderlands_specification.md  req.txt  requirements.md
kb-aads/: README.md  docker-compose.kafka.yml  main.py  requirements.txt
kb-checker/: Cargo.toml  README.md  build.rs
kb-checker/event_sets/: README.md  credential_access.json  lateral_movement.json  memory_exploit.json  normal_nginx.json  normal_postgres.json  privilege_escalation.json  reverse_shell.json
kb-checker/proto/: README.md  checker.proto  health.proto
kb-checker/src/: README.md  lib.rs  main.rs
kb-checker/src/grpc/: README.md  mod.rs
kb-checker/src/integrity/: README.md  mod.rs
kb-checker/src/report/: README.md  mod.rs
kb-checker/src/service_check/: README.md  mod.rs
kb-checker/tests/: README.md  checker_tests.rs
kb-control-plane/: Makefile  README.md  go.mod  go.sum
kb-core/: Makefile  README.md  kb_process
kb-dashboard/: README.md
kb-op/: README.md
kb-op/kb-tui/: Cargo.toml  README.md  build.rs
kb-op/kb-tui/cmd/: README.md
kb-op/kb-tui/internal/: README.md
kb-op/kb-tui/media/: readme.md
kb-op/kb-tui/src/: app.rs  demo.rs  grpc.rs  kb.rs  main.rs  query.rs  ui.rs
kb-tui/: README.md
media/: readme.md
scripts/: README.md
(+218 files in other folders)
