[package]
name = "kb-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = { version = "0.10", features = ["codegen", "prost"] }
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.4", features = ["derive"] }
libbpf-rs = "0.21"
libbpf-sys = "1.1"
libc = "0.2"
tower = { version = "0.4", features = ["util"] }
tokio-stream = { version = "0.1", features = ["net"] }
sha2 = "0.10"

[build-dependencies]
tonic-build = "0.10"
