[package]
name = "kb-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
tokio = { version = "1.35", features = ["full"] }
tonic = { version = "0.10", features = ["codegen", "prost"] }
prost = "0.12"
tower = { version = "0.4", features = ["util"] }
futures = "0.3"
rand = { version = "0.8", features = ["small_rng"] }

[build-dependencies]
tonic-build = "0.10"
